Prefer List.of to Collections.singletonList